[workspace]
members = [
  "examples/host",
  "examples/methods",
  "examples/methods/guest",
  "fixtures",
  "verify",
  "verity-tls",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bcs = { version = "0.1" }
bimap = { version = "0.6" }
bincode = { version = "1.3.3" }
blake3 = { version = "1.5" }
k256 = { version = "0.13" }
opaque-debug = { version = "0.3" }
p256 = { version = "0.13" }
rand = { version = "0.8" }
rand_core = { version = "0.6" }
rs_merkle = { git = "https://github.com/tlsnotary/rs-merkle.git", rev = "85f3e82" }
rstest = { version = "0.17" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
thiserror = { version = "1.0" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
web-time = { version = "0.2" }
webpki-roots = { version = "0.26" }

mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }

# TLSNotary packages
# tlsn-common = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.8" }
# tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
# tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.8" }
tlsn-tls-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "e7b2db6" }

# Risc0 packages
risc0-build = { version = "1.2.6" }
risc0-zkvm = { version = "1.2.6", default-features = false }

fixtures = { path = "./fixtures" }
methods = { path = "./examples/methods" }
verity-tls = { path = "./verity-tls" }
