[package]
name = "verity-tls"
version.workspace = true
edition.workspace = true

[features]
default = []
private-facets = []
public-facets = ["dep:tlsn-tls-core", "dep:web-time"]

[dependencies]
bcs = { workspace = true }
bimap = { workspace = true, features = ["serde"] }
bincode = { workspace = true }
blake3 = { workspace = true, features = ["serde"] }
hex = { workspace = true }
k256 = { workspace = true }
opaque-debug = { workspace = true }
p256 = { workspace = true, features = ["serde"] }
rand = { workspace = true }
rs_merkle = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }
web-time = { workspace = true, optional = true }
webpki-roots = { workspace = true }

mpz-circuits = { workspace = true }
mpz-core = { workspace = true }
mpz-garble-core = { workspace = true }

tlsn_rs_merkle = { workspace = true, features = ["serde"] }
tlsn-tls-core = { workspace = true, optional = true }
tlsn-utils = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true }
rstest = { workspace = true }
