[package]
name = "host"
version.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
hex = { workspace = true }
fixtures = { workspace = true }
methods = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
verity-tls = { workspace = true, features = [
  "private-facets",
  "public-facets",
] }
