[package]
name = "method"
version.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
fixtures = { workspace = true }
risc0-zkvm = { workspace = true, features = ['std'] }
serde_json = { workspace = true }
verity-tls = { workspace = true, features = ["private-facets"] }
